<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--Menu entries-->
    <string name="menu__action_refresh">Refresh</string>
    <string name="menu__action_search">Search</string>
    <string name="menu__edit">Edit</string>
    <string name="menu__delete">Delete</string>
    <string name="menu__log_in">Login</string>
    <string name="menu__log_out">Logout</string>
    <string name="menu__profile">Profile</string>
    <string name="menu__add">New listing</string>
    <string name="menu__save">Save</string>

    <!--Title entries-->
    <string name="title__activity_listing">Listing detail</string>
    <string name="title__activity_profile">Profile</string>
    <string name="title__section1">My listings</string>
    <string name="title__section2">Listings requested</string>
    <string name="title__activity_new_edit">NewEditActivity</string>
    <string name="title__create_listing">Create listing</string>
    <string name="title__edit_listing">Edit listing</string>

    <!--ListingDetail entries-->
    <string name="listing_detail__requested">Requested:\u0020</string>
    <string name="listing_detail__applicant">Applicant:\u0020</string>
    <string name="listing_detail__date_label">Published on:\u0020</string>
    <string name="listing_detail__category_label">Category:\u0020</string>
    <string name="listing_detail__request_text">Request</string>
    <string name="listing_detail__unrequest_text">Unrequest</string>

    <!--Login entries-->
    <string name="login__error_incorrect_username_or_password">Incorrect username or password</string>
    <string name="login__error_generic_error">Error, retry</string>
    <string name="login__success_logged_out">You\'are now logged out</string>

    <!--Main entries-->
    <string name="main__search_category_label">Category</string>
    <string name="main__search_province_label">Province</string>
    <string name="main__search_city_label">City</string>

    <!--Miscellaneous entries-->
    <string name="activity_name">TimeBank</string>
    <string name="app_name">TimeBank App</string>
    <string name="description_text__capital_letter">Description</string>
</resources>
