<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context=".MainActivity"
              android:orientation="vertical">


    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/description_search_editText" android:layout_gravity="center_horizontal"
            android:hint="@string/description_label" android:layout_marginBottom="14dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main__search_category_label"
                android:id="@+id/main__search_category_label" android:layout_weight="1" android:gravity="center_vertical|start"
                android:textSize="10dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main__search_province_label"
                android:id="@+id/main__search_province_label" android:layout_weight="1" android:gravity="center_vertical|start"
                android:textSize="10dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main__search_city_label"
                android:id="@+id/main__search_city_label" android:layout_weight="1" android:gravity="center_vertical|start"
                android:textSize="10dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
            android:layout_marginBottom="14dp">
        <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/main__category_spinner" android:layout_weight="1"/>
        <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/main__province_spinner" android:layout_weight="1"/>
        <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/main__city_spinner" android:layout_weight="1"/>
    </LinearLayout>
    <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listView" android:layout_gravity="center_horizontal"
            />
</LinearLayout>
